[package]
name = "piazza-clone"
version = "0.1.0"
authors = ["Mani Kamali <kamalisarvestani.1@themetroschool.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
csv = "1.1"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
serde_json = "1.0.59"
serde = {version = "1.0.117", features = ["derive"]}
futures = "0.3"




